--- a/index.htm
+++ b/index.htm
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="/styles/main.css" />
+    <title>Criminals Book Series - Place Names</title>
   </head>
   <body>
     <ul class="a">
