--- a/index.htm
+++ b/index.htm
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="/styles/main.css" />
     <title>Criminals Book Series - Place Names</title>
+    <link rel="icon" href="/images/website-icon/79853-200.png" />
   </head>
   <body>
     <ul class="a">
