--- a/index.htm
+++ b/index.htm
@@ -71,6 +71,10 @@
           <ul class="d">
             <li>State: Woodlight</li>
           </ul>
+          <li>Middle City</li>
+          <ul class="d">
+            <li>State: Newspell</li>
+          </ul>
         </ul>
         <li>Small Towns</li>
         <ul class="c">
