--- a/index.htm
+++ b/index.htm
@@ -75,6 +75,106 @@
           <ul class="d">
             <li>State: Newspell</li>
           </ul>
+          <li>Emeraldbell</li>
+          <ul class="d">
+            <li>State: Marblewind</li>
+          </ul>
+          <li>Fallbrook</li>
+          <ul class="d">
+            <li>State: Woodlight</li>
+          </ul>
+          <li>Fallshaw</li>
+          <ul class="d">
+            <li>State: Woodburg</li>
+          </ul>
+          <li>Quartz Park</li>
+          <ul class="d">
+            <li>State: Pinewind</li>
+          </ul>
+          <li>Weakshaw</li>
+          <ul class="d">
+            <li>State: Woodlight</li>
+          </ul>
+          <li>Hurst Springs</li>
+          <ul class="d">
+            <li>State: Pinebarrow</li>
+          </ul>
+          <li>Summer Shores</li>
+          <ul class="d">
+            <li>State: Marblewind</li>
+          </ul>
+          <li>Pinewick</li>
+          <ul class="d">
+            <li>State: Tinpond</li>
+          </ul>
+          <li>Oakton</li>
+          <ul class="d">
+            <li>State: Woodburg</li>
+          </ul>
+          <li>Diamond Grove</li>
+          <ul class="d">
+            <li>State: Wellburg</li>
+          </ul>
+          <li>Obsidianspire</li>
+          <ul class="d">
+            <li>State: Ironmarble</li>
+          </ul>
+          <li>Dangerspire</li>
+          <ul class="d">
+            <li>State: Ironport</li>
+          </ul>
+          <li>Thurman Grove</li>
+          <ul class="d">
+            <li>State: Tinpond</li>
+          </ul>
+          <li>Reed Row</li>
+          <ul class="d">
+            <li>State: Lavacastle</li>
+          </ul>
+          <li>Fall Glen</li>
+          <ul class="d">
+            <li>State: Ironport</li>
+          </ul>
+          <li>Springport</li>
+          <ul class="d">
+            <li>State: Wellburg</li>
+          </ul>
+          <li>Cricket Center</li>
+          <ul class="d">
+            <li>State: Pinebarrow</li>
+          </ul>
+          <li>Hickorypool</li>
+          <ul class="d">
+            <li>State: Lavaview</li>
+          </ul>
+          <li>Hurstchester</li>
+          <ul class="d">
+            <li>State: Marblewind</li>
+          </ul>
+          <li>Pyritedown</li>
+          <ul class="d">
+            <li>State: Tinpond</li>
+          </ul>
+          <li>Kingsbourne</li>
+          <ul class="d">
+            <li>State: Ironpond</li>
+          </ul>
+          <li>Cricket Row</li>
+          <ul class="d">
+            <li>State: Stoneport</li>
+          </ul>
+          <li>Queen Hills</li>
+          <ul class="d">
+            <li>State: Sprucecastle</li>
+          </ul>
+          <li>Middle Springs</li>
+          <ul class="d">
+            <li>State: Platinumburn</li>
+          </ul>
+          <li>Maple Plains</li>
+          <ul class="d">
+            <li>State: Northburgh</li>
+          </ul>
         </ul>
         <li>Small Towns</li>
         <ul class="c">
