--- a/index.htm
+++ b/index.htm
@@ -242,6 +242,10 @@
           <ul class="d">
             <li>State: Ironpond</li>
           </ul>
+          <li>Reedlight</li>
+          <ul class="d">
+            <li>State: Birchbarrow</li> 
+          </ul>
         </ul>
         <li>States</li>
         <ul class="c">
@@ -427,6 +431,42 @@
         <li>Pinebeach Financial</li>
         <ul class="d">
           <li>Town: Summertown</li>
+        </ul>
+        <li>Quartzburg Financial Institution</li>
+        <ul class="d">
+          <li>City: Fallbrook</li>
+        </ul>
+        <li>Reedspell Financial Bank</li>
+        <ul class="d">
+          <li>City: Hurst Springs</li>
+        </ul>
+        <li>Queenmarble Financial Institution</li>
+        <ul class="d">
+          <li>City: Universal Grove</li>
+        </ul>
+        <li>Kingspell Savings</li>
+        <ul class="d">
+          <li>Town: Birch Oaks</li>
+        </ul>
+        <li>Sprucelight Holdings</li>
+        <ul class="d">
+          <li>Town: Golddown</li>
+        </ul>
+        <li>Crowmarble Financial</li>
+        <ul class="d">
+          <li>City: Cricket Row</li>
+        </ul>
+        <li>Obsidianspell Bank</li>
+        <ul class="d">
+          <li>City: Queen Hills</li>
+        </ul>
+        <li>Universalpond Financial Bank</li>
+        <ul class="d">
+          <li>Town: Gold Hills</li>
+        </ul>
+        <li>Pinemaple Financial Bank</li>
+        <ul class="d">
+          <li>Town: Oakport</li>
         </ul>
       </ul>
     </ul>
