--- a/index.htm
+++ b/index.htm
@@ -468,6 +468,10 @@
         <ul class="d">
           <li>Town: Oakport</li>
         </ul>
+        <li>Moonlight Loan and Savings</li>
+        <ul class="d">
+          <li>Town: Spruceburgh</li>
+        </ul>
       </ul>
     </ul>
   </body>
