--- a/index.htm
+++ b/index.htm
@@ -391,85 +391,85 @@
         </ul>
       </ul>
       <li>Banks</li>
-      <ul class="c">
+      <ul class="b">
         <li>Springmeadow Financial</li>
-        <ul class="d">
+        <ul class="c">
           <li>City: Shadowgrove</li>
         </ul>
         <li>Kingsburg Bank</li>
-        <ul class="d">
+        <ul class="c">
           <li>Town: Spruceburgh</li>
         </ul>
         <li>Stonemarble Bank</li>
-        <ul class="d">
+        <ul class="c">
           <li>Town: Morningstead</li>
         </ul>
         <li>Weakmeadow Bank</li>
-        <ul class="d">
+        <ul class="c">
           <li>City: Platinum Plains</li>
         </ul>
         <li>Greenport Financial</li>
-        <ul class="d">
+        <ul class="c">
           <li>Town: Teaburgh</li>
         </ul>
         <li>Reidmarble Financial Institution</li>
-        <ul class="d">
+        <ul class="c">
           <li>Town: Autumn Glen</li>
         </ul>
         <li>Autumnlight Bank</li>
-        <ul class="d">
+        <ul class="c">
           <li>Town: Spruceville</li>
         </ul>
         <li>Hickorymarble Bank</li>
-        <ul class="d">
+        <ul class="c">
           <li>City: Tingrove</li>
         </ul>
         <li>Whisperspell Holdings</li>
-        <ul class="d">
+        <ul class="c">
           <li>Town: Autumn Glen</li>
         </ul>
         <li>Pinebeach Financial</li>
-        <ul class="d">
+        <ul class="c">
           <li>Town: Summertown</li>
         </ul>
         <li>Quartzburg Financial Institution</li>
-        <ul class="d">
+        <ul class="c">
           <li>City: Fallbrook</li>
         </ul>
         <li>Reedspell Financial Bank</li>
-        <ul class="d">
+        <ul class="c">
           <li>City: Hurst Springs</li>
         </ul>
         <li>Queenmarble Financial Institution</li>
-        <ul class="d">
+        <ul class="c">
           <li>City: Universal Grove</li>
         </ul>
         <li>Kingspell Savings</li>
-        <ul class="d">
+        <ul class="c">
           <li>Town: Birch Oaks</li>
         </ul>
         <li>Sprucelight Holdings</li>
-        <ul class="d">
+        <ul class="c">
           <li>Town: Golddown</li>
         </ul>
         <li>Crowmarble Financial</li>
-        <ul class="d">
+        <ul class="c">
           <li>City: Cricket Row</li>
         </ul>
         <li>Obsidianspell Bank</li>
-        <ul class="d">
+        <ul class="c">
           <li>City: Queen Hills</li>
         </ul>
         <li>Universalpond Financial Bank</li>
-        <ul class="d">
+        <ul class="c">
           <li>Town: Gold Hills</li>
         </ul>
         <li>Pinemaple Financial Bank</li>
-        <ul class="d">
+        <ul class="c">
           <li>Town: Oakport</li>
         </ul>
         <li>Moonlight Loan and Savings</li>
-        <ul class="d">
+        <ul class="c">
           <li>Town: Spruceburgh</li>
         </ul>
       </ul>
