--- a/index.htm
+++ b/index.htm
@@ -511,6 +511,10 @@
         <ul class="c">
           <li>City: Danger City</li>
         </ul>
+        <li>Springburn Medium Security Institution</li>
+        <ul class="c">
+          <li>City: Platinum Plains</li>
+        </ul>
       </ul>
     </ul>
   </body>
