--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="/styles/main.css" />
-    <title>Criminals Book Series - Place Names</title>
+    <title>Criminals Book Series - Info</title>
     <link rel="icon" href="/images/website-icon/money-bag.png" />
   </head>
   <body>
