--- a/index.htm
+++ b/index.htm
@@ -516,6 +516,17 @@
           <li>City: Platinum Plains</li>
         </ul>
       </ul>
+      <li>Characters</li>
+      <ul class="b">
+        <li>Male</li>
+        <ul class="c">
+          <li></li>
+        </ul>
+        <li>Female</li>
+        <ul class="c">
+          <li></li>
+        </ul>
+      </ul>
     </ul>
   </body>
 </html>
