--- a/index.htm
+++ b/index.htm
@@ -520,11 +520,11 @@
       <ul class="b">
         <li>Male</li>
         <ul class="c">
-          <li></li>
+          <li>Darron Carter</li>
         </ul>
         <li>Female</li>
         <ul class="c">
-          <li></li>
+          <li>Kaitlyn Knox</li>
         </ul>
       </ul>
     </ul>
