--- a/index.htm
+++ b/index.htm
@@ -521,10 +521,22 @@
         <li>Male</li>
         <ul class="c">
           <li>Darron Carter</li>
+          <li>Dean Daniels</li>
+          <li>Dale Roberts</li>
+          <li>Paul Thomas</li>
+          <li>Aaron Walch</li>
+          <li>Oliver Martin</li>
+          <li>Franklin Bown</li>
+          <li>Karl Patterson</li>
+          <li>Will Palmer</li>
         </ul>
         <li>Female</li>
         <ul class="c">
           <li>Kaitlyn Knox</li>
+          <li>Haylie Harrison</li>
+          <li>Emily Finch</li>
+          <li>April Reid</li>
+          <li>Becca Adkins</li>
         </ul>
       </ul>
     </ul>
