--- a/index.htm
+++ b/index.htm
@@ -537,6 +537,9 @@
           <li>Emily Finch</li>
           <li>April Reid</li>
           <li>Becca Adkins</li>
+          <li>Bella Browne</li>
+          <li>Laura Dowling</li>
+          <li>Lindsey Howell</li>
         </ul>
       </ul>
     </ul>
