--- a/index.htm
+++ b/index.htm
@@ -529,6 +529,7 @@
           <li>Franklin Bown</li>
           <li>Karl Patterson</li>
           <li>Will Palmer</li>
+          <li>Shawn Cooke</li>
         </ul>
         <li>Female</li>
         <ul class="c">
