--- a/index.htm
+++ b/index.htm
@@ -541,6 +541,8 @@
           <li>Bella Browne</li>
           <li>Laura Dowling</li>
           <li>Lindsey Howell</li>
+          <li>Nikki Brown</li>
+          <li>Ella Wright</li>
         </ul>
       </ul>
     </ul>
