--- a/index.htm
+++ b/index.htm
@@ -499,7 +499,7 @@
         <ul class="c">
           <li>City: Icewick</li>
         </ul>
-        <li>Autumnbush High Security Detention Center</li>
+        <li>Autumnbush High Security Federal Prison</li>
         <ul class="c">
           <li>City: Westfare</li>
         </ul>
