--- a/index.htm
+++ b/index.htm
@@ -530,6 +530,7 @@
           <li>Karl Patterson</li>
           <li>Will Palmer</li>
           <li>Shawn Cooke</li>
+          <li>Lucas Wise</li>
         </ul>
         <li>Female</li>
         <ul class="c">
@@ -543,6 +544,7 @@
           <li>Lindsey Howell</li>
           <li>Nikki Brown</li>
           <li>Ella Wright</li>
+          <li>Chelsea McIntyre</li>
         </ul>
       </ul>
     </ul>
