--- a/index.htm
+++ b/index.htm
@@ -515,6 +515,10 @@
         <ul class="c">
           <li>City: Platinum Plains</li>
         </ul>
+        <li>Blacklight State Correctional Facility</li>
+        <ul class="c">
+          <li>City: Fallbrook</li>
+        </ul>
       </ul>
       <li>Characters</li>
       <ul class="b">
