--- a/index.htm
+++ b/index.htm
@@ -515,10 +515,6 @@
         <ul class="c">
           <li>City: Platinum Plains</li>
         </ul>
-        <li>Blacklight State Correctional Facility</li>
-        <ul class="c">
-          <li>City: Fallbrook</li>
-        </ul>
       </ul>
       <li>Characters</li>
       <ul class="b">
@@ -535,6 +531,8 @@
           <li>Will Palmer</li>
           <li>Shawn Cooke</li>
           <li>Lucas Wise</li>
+          <li>Brett Hill</li>
+          <li>Brad Moore</li>
         </ul>
         <li>Female</li>
         <ul class="c">
@@ -546,9 +544,10 @@
           <li>Bella Browne</li>
           <li>Laura Dowling</li>
           <li>Lindsey Howell</li>
-          <li>Nikki Brown</li>
           <li>Ella Wright</li>
           <li>Chelsea McIntyre</li>
+          <li>April Davis</li>
+          <li>Arielle Danielson</li>
         </ul>
       </ul>
     </ul>
