--- a/index.htm
+++ b/index.htm
@@ -533,6 +533,7 @@
           <li>Lucas Wise</li>
           <li>Brett Hill</li>
           <li>Brad Moore</li>
+          <li>Derek Abbett</li>
         </ul>
         <li>Female</li>
         <ul class="c">
@@ -548,6 +549,7 @@
           <li>Chelsea McIntyre</li>
           <li>April Davis</li>
           <li>Arielle Danielson</li>
+          <li>Amia Ackers</li>
         </ul>
       </ul>
     </ul>
