--- a/index.htm
+++ b/index.htm
@@ -365,6 +365,18 @@
           <ul class="d">
             <li>Country: Woodburn</li>
           </ul>
+          <li>Northkeep</li>
+          <ul class="d">
+            <li>Country: Emeraldport</li>
+          </ul>
+          <li>Northmarble</li>
+          <ul class="d">
+            <li>Country: Emeraldport</li>
+          </ul>
+          <li>Deerlight</li>
+          <ul class="d">
+            <li>Country: Emeraldport</li>
+          </ul>
         </ul>
         <li>Countries</li>
         <ul class="c">
