--- a/index.htm
+++ b/index.htm
@@ -175,6 +175,18 @@
           <ul class="d">
             <li>State: Northburgh</li>
           </ul>
+          <li>Whisperville</li>
+          <ul class="d">
+            <li>State: Northkeep</li>
+          </ul>
+          <li>Queen Village</li>
+          <ul class="d">
+            <li>State: Northmarble</li>
+          </ul>
+          <li>Oakstead</li>
+          <ul class="d">
+            <li>State: Deerlight</li>
+          </ul>
         </ul>
         <li>Small Towns</li>
         <ul class="c">
